DRTII-1220 Set width on flagging column to prevent truncation

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -1837,6 +1837,10 @@ th h2 {
   cursor: pointer;
 }
 
+.arrivals__table__flags-column {
+  width: 110px;
+}
+
 .arrivals__table__flight-est-pcp {
   width: 110px;
 }
